2009-12-17  Gordon Williams <gordon.williams@collabora.co.uk>

	Hildon-desktop changes for NB#131671 - Camera app loading screenshot
	These are required, but do not fix the issue until other patches
	are applied to libhildonmime and libosso.
	
	* src/launcher/hd-launcher.c: Ensure we don't try and start one 
	  loading screen while we're already displaying another - causes
	  flicker.
	* src/mb/hd-comp-mgr.c: If we change the topmost app, reset our time
	  since map counter. This stops us doing a loading screenshot if the 
	  app we tried to launch was already running and we just swapped to it.	   	

2009-12-14  Marc Ordinas i Llopis <marc.ordinasillopis@collabora.co.uk>

	Remove the second level (Applications) in the task launcher.
	Fixes NB#150638.

2009-12-14  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#150492 not informed when the application loading screenshot has
		  been taken

	* src/home/hd-home.c (root_window_client_message):
	  Notify the client when the screenshot is done + refactorization.
	  Requires recent unreleased libhildon.

2009-12-11  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#150091 P/L switching fails in call-ui while making an
		  outgoing call from contacts

	Subview transition in progres (Contact details -> All contacts),
	gets interrupted by the topping of Phone, restack, set_visibilities,
	subview transition completes, messes up visibilities, may_be_portrait
	gets dicouraged and doesn't turn to portrait, tester complains.

	* src/home/hd-render-manager (hd_render_manager_set_visibilities):
	  Publicized.
	* src/util/hd-transition.c (hd_transition_completed):
	  set_visibilities() when all of certain kinds of transition are done
	* src/util/hd-transition.c (hd_transition_popup, hd_transition_fade, hd_transition_subview):
	  them

2009-12-10  Jan Arne Petersen  <jpetersen@openismus.com>

	Add support for Russian Cyrillic keyboard layout to Contacts live
	search started by home.
